--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     width: 140px;
 }
 
+.bg-mobile {
+    display: none;
+}
+
 .container {
     display: flex;
     background-image: url('images/bg-pattern-desktop.svg');
@@ -48,6 +52,11 @@ p {
     padding: 0 180px;
 }
 
+.inner-container {
+    /* max-width: 400px; */
+}
+
+
 .right {
     width: 40%;
 }
@@ -70,6 +79,10 @@ input {
     width: 100%;
     font-size: 15px;
     height: 50px;
+}
+
+input::placeholder {
+    color:  hsl(0, 36%, 70%);
 }
 
 button {
@@ -121,6 +134,24 @@ button:hover {
      hsl(0, 0%, 100%),
      hsl(0, 74%, 74%)
     );
+}
+
+@media (max-width: 960px) {
+    .left {
+        width: 100%;
+        padding: 0px 30px 0px 30px;
+    }
+    
+    .right {
+        display: none;
+    }
+
+    .bg-mobile {
+        display: block;
+        max-width: 100%;
+        padding-bottom: 30px;
+    }
+
 }
 
 /* 
